--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
-      <meta name="author" content="harrnish">
+      <meta name="author" content="varmaashik">
 
       <title>About Me | Portfolio Website Template | CODEGRID</title>
 
@@ -29,7 +29,7 @@
             <!--------------- navbar starts here --------------->
             <nav>
                   <span id="brand">
-                        <a href="index.html">harrnish</a>
+                        <a href="index.html">varmaashik</a>
                   </span>
 
                   <ul id="menu">
@@ -77,9 +77,14 @@
                               <div class="col-lg-12">
                                     <h3 class="wow fadeInUp" data-wow-delay="1.2s">about me.</h3><br>
 
-                                    <p class="wow fadeInUp">Living with passion is what I strictly adhere to. “Always do what you love” how much ever hackneyed this sounds it holds absolutely true. That's why I travel a lot. Not for the sole reason of “loving” to travel but it helps me to get rid of the world and escape into a different dimension of my own. As I am a travel freak I love freezing the moments I relish. The art of capturing photos is something I am always fascinated by.</p>
+                                    <p class="wow fadeInUp">Hi, I’m Ashik. I'm a JS dev with over 3+ years of experience in Web Development.</p>
 
-                                    <p class="wow fadeInUp" data-wow-delay="0.2s">I am a continuous learner. Learning for me equates to exploring new ideas and growing as an individual. I just cannot imagine my life devoid of designing. I freely express my creativity and imagination by designing. And to give my passion of designing a platform I have a YouTube channel named, Codegrid.</p>
+                                    <p class="wow fadeInUp" data-wow-delay="0.2s">I currently work as an Software Engineer at InApp Inc., India.
+                                          My area of expertise include React, Angular, Nodejs and CSS3, GSAP for UI/UX. I prefer to
+                                          keep
+                                          learning, continue challenging myself, and do interesting things that matter. I like to
+                                          develop
+                                          expertise in a number of areas over the course of my life and career.</p>
 
                               </div>
                         </div>
@@ -114,7 +119,7 @@
                               <div class="row">
                                     <div class="col-lg-4" id="personal">
                                           <p class="wow fadeInUp">connect with me</p>
-                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">ig @harrnish</h4>
+                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">ig @varmaashik</h4>
                                           <br><br>
                                     </div>
 
@@ -133,7 +138,7 @@
 
                                     <div class="col-lg-4" id="address">
                                           <p class="wow fadeInUp" data-wow-delay="0s">say hello</p>
-                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">harrnish@gmail.com</h4>
+                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">varmaashik@gmail.com</h4>
                                           <br><br>
                                     </div>
                               </div>
