--- a/contact.html
+++ b/contact.html
@@ -89,11 +89,9 @@
               <h3 class="wow fadeInUp" data-wow-delay="1s">say hello 👋</h3>
               <br />
               <p class="wow fadeInUp" data-wow-delay="1.2s">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque,
-                accusantium sint quod voluptatem dolorum, quaerat, ut iusto
-                cumque magni ab repudiandae, quasi minus unde temporibus nulla
-                eum eaque! Placeat praesentium sunt suscipit laboriosam deserunt
-                commodi atque corporis, iure maiores dicta, fugit similique.
+                Got any projects you need help with? <br />
+                Drop a message. <br/>
+                Let's talk over a cup of coffee. <span id="coffee-emoji">☕</span>
               </p>
             </div>
           </div>
